# WinSoundDirection

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  NextStep.md  README.md  SpatialAudioVisualizer.sln  SpatialAudioVisualizer.vcxproj  USAGE.md  build.bat  build_macos.sh  test_spatial_audio.bat
.kiro/specs/spatial-audio-visualizer/: design.md  requirements.md  tasks.md
mock/windows/: d2d1.h  windows.h
resources/: ICON_README.md  app.manifest  create_better_icon.py  create_icon.py  generate_icons.py  preview_icon.py  resource.rc
src/: Application.cpp  Application.h  main.cpp
src/App/: ApplicationHost.cpp  ApplicationHost.h  SpatialVisualizerApp.cpp  SpatialVisualizerApp.h
src/Audio/: AudioCaptureEngine.cpp  AudioCaptureEngine.h  DirectionProcessor.cpp  DirectionProcessor.h  SpatialAudioEngine.cpp  SpatialAudioEngine.h  SpatialAudioRouter.cpp  SpatialAudioRouter.h
src/Common/: Config.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h  Types.h  WindowsCompat.h
src/Config/: ConfigManager.cpp  ConfigManager.h
src/Diagnostics/: PerformanceMonitor.cpp  PerformanceMonitor.h
src/Hotkeys/: HotkeyController.cpp  HotkeyController.h
src/Input/: HotkeyManager.cpp  HotkeyManager.h
src/Rendering/: DirectionVisualizer.cpp  DirectionVisualizer.h  RenderEngine.cpp  RenderEngine.h
src/System/: SystemTrayManager.cpp  SystemTrayManager.h
src/UI/: OverlayWindow.cpp  OverlayWindow.h  SettingsController.cpp  SettingsController.h  TrayIcon.cpp  TrayIcon.h
src/Util/: ComException.h  ComInitializer.h  DispatcherTimer.h  ScopeExit.h
src/Window/: WindowManager.cpp  WindowManager.h
test/: Generate3DAudio.ps1  analyze_audio_envelope.py  generate_test_audio.py  run_audio_test.bat  test_spatial_audio.bat
